# HandsOnProjects

Planning/: DWA.py  DWA_sim.py  README.txt
Planning/frontier_search_dwa/: CMakeLists.txt  README.md  map.npy  package.xml  path.npy
Planning/frontier_search_dwa/launch/: gazebo.launch  hands_on.launch  kobuki.launch  kobuki_motion_planning.launch  stonefish.launch  turtlebot3_home_sim.launch
Planning/frontier_search_dwa/msg/: dwa.msg
Planning/frontier_search_dwa/notebooks/: state_validity_checker.ipynb
Planning/frontier_search_dwa/scenarios/: kobuki_hol_circuit2_arucos.scn  kobuki_hol_circuit2_arucos_enclosed.scn  kobuki_hol_circuit2_extra wall.scn  kobuki_lidar_range_3.scn  turtlebot_featherstone.scn  turtlebot_planning.scn
aruco_slam_HOP2/aruco_slam_HOP/: CMakeLists.txt  package.xml  setup.py
intervention/: CMakeLists.txt  package.xml
intervention turtlebot/: package.xml
intervention turtlebot/launch/: intervention_turtlebot.launch
intervention turtlebot/src/: behavior_tree_robot_t.py  define_t.py  main_services_t.py  main_t.py
intervention/launch/: Intervention_final.launch  swiftpro_basic.launch
intervention/src/: aruco_position.py  behavior_tree_robot.py  deadReckonening.py  define.py  main.py  main_arm_only.py  main_services.py  manipulatorTest.py  manipulatorTest_modified.py  send_goal.py
intervention_turtlebot/: CMakeLists.txt
intervention_turtlebot/launch/: intervention_turtlebot.launch
intervention_turtlebot/msg/: Goal.msg
intervention_turtlebot/src/: aruco_position_t.py  behavior_tree_robot_t.py  define_t.py  main_t.py
(+16 files in other folders)
