<package format="2">
  <name>hands_on_intervention</name>
  <version>0.0.1</version>
  <description>Your package description</description>

  <maintainer email="your_email@example.com">Jim</maintainer>
  <license>BSD</license>

  <!-- ✅ Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ✅ Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- ✅ Execution dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>

